contact form responsive size correction (was not wrapping on small devices)

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -59,7 +59,8 @@ img {
 }
 
 .input-group-text {
-  min-width: 100px;
+  /* min-width: 100px; */
+  white-space: nowrap;
 }
 
 
